--- a/Meli Challenge/Views/Base.lproj/Main.storyboard
+++ b/Meli Challenge/Views/Base.lproj/Main.storyboard
@@ -63,6 +63,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="00b-yL-Jil">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
