--- a/Meli Challenge/Views/Base.lproj/Main.storyboard
+++ b/Meli Challenge/Views/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dwQ-GC-nG2">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="ipad12_9rounded" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -13,35 +13,46 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="SearchViewController" customModule="Meli_Challenge" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Busca en Mercado Libre" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="HIZ-N3-OVw">
-                                <rect key="frame" x="20" y="288" width="374" height="34"/>
+                                <rect key="frame" x="362" y="284" width="300" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="sZc-7h-DsH"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="go"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OpM-6L-Ocm">
-                                <rect key="frame" x="92" y="362" width="230" height="40"/>
+                                <rect key="frame" x="362" y="338" width="300" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="19g-2I-XgR"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="230" id="dp0-RO-zBW"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="300" id="dp0-RO-zBW"/>
                                 </constraints>
+                                <color key="tintColor" name="BlueBrandColor"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Buscar"/>
                                 <connections>
                                     <action selector="searchTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="98y-Vo-dKc"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_tagline" translatesAutoresizingMaskIntoConstraints="NO" id="KoC-wM-QJU">
+                                <rect key="frame" x="437" y="94" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="YT0-Oj-PoL"/>
+                                    <constraint firstAttribute="height" constant="150" id="hF2-aI-oti"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="PrimaryBrandColor"/>
                         <constraints>
-                            <constraint firstItem="OpM-6L-Ocm" firstAttribute="top" secondItem="HIZ-N3-OVw" secondAttribute="bottom" constant="40" id="7fY-cX-ywe"/>
-                            <constraint firstItem="HIZ-N3-OVw" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="200" id="Fvt-13-0aP"/>
-                            <constraint firstItem="HIZ-N3-OVw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Hk4-Lu-CFv"/>
-                            <constraint firstItem="HIZ-N3-OVw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="dki-OP-62d"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="HIZ-N3-OVw" secondAttribute="trailing" constant="20" id="vJp-T2-km5"/>
+                            <constraint firstItem="OpM-6L-Ocm" firstAttribute="top" secondItem="HIZ-N3-OVw" secondAttribute="bottom" constant="20" id="7fY-cX-ywe"/>
+                            <constraint firstItem="HIZ-N3-OVw" firstAttribute="top" secondItem="KoC-wM-QJU" secondAttribute="bottom" constant="40" id="Fxp-se-scn"/>
+                            <constraint firstItem="KoC-wM-QJU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Mzp-J6-ncD"/>
+                            <constraint firstItem="HIZ-N3-OVw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Qgv-5t-swf"/>
+                            <constraint firstItem="KoC-wM-QJU" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="YDT-y1-8ji"/>
                             <constraint firstItem="OpM-6L-Ocm" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yQY-2y-VJ8"/>
                         </constraints>
                     </view>
@@ -61,9 +72,10 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dwQ-GC-nG2" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="00b-yL-Jil">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="24" width="1024" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" name="BlueBrandColor"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -76,6 +88,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="logo_tagline" width="2500" height="2263"/>
+        <namedColor name="BlueBrandColor">
+            <color red="0.1803921568627451" green="0.20000000000000001" blue="0.45098039215686275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="PrimaryBrandColor">
             <color red="1" green="0.94509803921568625" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
